Add box function

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Ammo Test
         <h1>Ammo Test</h1>
     </head>
     <body>
-        <button>Button</button>
+        <button id='addbox'>Add Box</button>
         <p>
     </body>
 </html>
