--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@ title: Ammo Test
     </head>
     <body>
         <button id='addbox'>Add Box</button>
+        <button id='addcapsule'>Add Capsule</button>
         <p>
     </body>
 </html>
