--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@ title: Ammo Test
     <body>
         <button id='addbox'>Add Box</button>
         <button id='addcapsule'>Add Capsule</button>
+        <button id='addsphere'>Add Sphere</button>
         <p>
     </body>
 </html>
