--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@ title: Ammo Test
         <button id='addbox'>Add Box</button>
         <button id='addcapsule'>Add Capsule</button>
         <button id='addsphere'>Add Sphere</button>
+        <button id='addcylinder'>Add Cylinder</button>
         <p>
     </body>
 </html>
