Create humanoid character
- Add human.js (json file describing human (converted from four.js))
- Parse human.js in main function
- Adjust camera

- TODO:
    - Hinge joint limits.

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@ title: Ammo Test
         <title>Ammo Test</title>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
         <script src="static/ammo.js"></script>
+        <script src="static/human.js"></script>
         <script src="static/bundle.js"></script>
         <h1>Ammo Test</h1>
     </head>
