Update name of html page
- AmmoTest -> SimbiconJS

--- a/index.html
+++ b/index.html
@@ -1,21 +1,14 @@
 ---
-title: Ammo Test
+title: SimbiconJS
 ---
 <!doctype html>
 <html>
     <head>
-        <title>Ammo Test</title>
+        <title>SimbiconJS</title>
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
         <script src="static/ammo.js"></script>
         <script src="static/human.js"></script>
         <script src="static/bundle.js"></script>
-        <h1>Ammo Test</h1>
+        <h1>SimbiconJS</h1>
     </head>
-    <body>
-        <button id='addbox'>Add Box</button>
-        <button id='addcapsule'>Add Capsule</button>
-        <button id='addsphere'>Add Sphere</button>
-        <button id='addcylinder'>Add Cylinder</button>
-        <p>
-    </body>
 </html>
