--- a/index.html
+++ b/index.html
@@ -14,6 +14,8 @@ title: SimbiconJS
         <script>
             $(document).ready(function() {
 
+                window.initialize();
+
                 $('#simbicon').append(world.renderer.panel);
                 world.renderer.setSize();
 
@@ -66,5 +68,20 @@ title: SimbiconJS
                 <button id='fwalk'>Fast Walk</button> 
             </div>
         </div>
+        <script id="ground_fragShader" type="x-shader/x-fragment">
+            varying vec4 vPosition;
+            void main() {
+                float color = mod(vPosition.x/4.,1.0);
+                gl_FragColor = mix(vec4(0.3,0.3,0.3, 1.0), vec4(.5,.5,.5,1.0), step(0.5, color));
+            }
+        </script>
+        <script id="ground_vertShader" type="x-shader/x-vertex">
+            varying vec4 vPosition;
+            void main() {
+                vPosition = modelMatrix * vec4(position, 1.0);
+                gl_Position = projectionMatrix * viewMatrix * vPosition;
+            }
+        </script>
+
     </body>
 </html>
