--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@ title: SimbiconJS
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
         <script src="static/ammo.js"></script>
         <script src="static/human.js"></script>
+        <script src="static/mesh.js"></script>
         <script src="static/bundle.js"></script>
         <script>
             $(document).ready(function() {
