Change mesh JSON, format. Create outline
- Each object in the mesh now has its own vertex list, instead of a
shared one.

- Using a convex hull algorithm to compute the mesh outline

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@ title: SimbiconJS
         <link rel="stylesheet" type="text/css" href="css/simbicon.css">
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
         <script src="static/ammo.js"></script>
+        <script src="static/graham_scan.min.js"></script>
         <script src="static/human.js"></script>
         <script src="static/mesh.js"></script>
         <script src="static/bundle.js"></script>
