Split out simbicon script from physics/renderering script
- Created standalone library Pear.js (Physics Engine And Rendering
framework)
- Need to add libraries (ammo,three,graham_scan) into it...

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@ title: SimbiconJS
         <script src="static/graham_scan.min.js"></script>
         <script src="static/human.js"></script>
         <script src="static/mesh.js"></script>
-        <script src="static/bundle.js"></script>
+        <script src="static/pear.js"></script>
+        <script src="static/simbicon.js"></script>
         <script>
             $(document).ready(function() {
 
