Move physics and rendering library to own repo
- Moved the physics and rendering framework to
[coach.js](https://github.com/mfirmin/coach.js)

- This repo now just serves as the Simbicon Control script _only_, using
coach.js as an external library.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@ title: SimbiconJS
         <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.4.2/jquery.min.js"></script>
         <script src="static/human.js"></script>
         <script src="static/mesh.js"></script>
-        <script src="static/pear.js"></script>
+        <script src="static/coach.js"></script>
         <script src="static/simbicon.js"></script>
         <script>
             $(document).ready(function() {
